--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vite-plugin-pwa": "^0.16.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
